# blue-terminal-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  test.yml
bluetermgen/: __init__.py  base.py  constants.py  exceptions.py  helpers.py  menu.py  message.py  table.py  types.py
docs/: Makefile  make.bat
docs/source/: changelog.rst  conf.py  contributing.rst  development.rst  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
tests/: conftest.py  test_menu.py  test_message.py  test_table.py
tests/unittest/: test_menu.py  test_message.py  test_table.py
